--- a/views/home.ejs
+++ b/views/home.ejs
@@ -27,6 +27,8 @@
             </div>
 
             <% if (locals.urls) { %>
+                <h4>Username : <%= locals.username %>
+                </h4>
                 <table>
                     <thead>
                         <th>Sr. No.</th>
