harcode corrected domain

--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -32,7 +32,7 @@
 <script>
     const loginBtn = document.getElementById("login-btn");
     loginBtn.addEventListener("click", () => {
-        window.location.href = window.location.href.replace("/signup", "https://short-3r5pumf2j-shreyash-galgales-projects.vercel.app/login");
+        window.location.href = "https://short-3r5pumf2j-shreyash-galgales-projects.vercel.app/login"
     });
 </script>
 
