--- a/views/login.ejs
+++ b/views/login.ejs
@@ -29,7 +29,7 @@
 <script>
     const signupBtn = document.getElementById("signup-btn");
     signupBtn.addEventListener("click", () => {
-        window.location.href = window.location.href.replace("/login", "https://short-3r5pumf2j-shreyash-galgales-projects.vercel.app/signup");
+        window.location.href = "https://short-3r5pumf2j-shreyash-galgales-projects.vercel.app/signup";
     });
 </script>
 
